--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,10 @@
   "extends": ["airbnb-base", "prettier"],
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "plugins": ["prettier"],
   "rules": {
