--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@cloudflare/json-schema-walker": "^0.1.1",
     "lodash": "^4.17.11",
-    "yargs": "^12.0.2",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -36,7 +36,6 @@
     "husky": "^1.0.0-rc.1",
     "lerna": "^3.4.0",
     "lint-staged": "^7.3.0",
-    "npm": "^6.4.1",
     "pretty-quick": "^1.7.0"
   },
   "lint-staged": {
