--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsugen",
   "version": "0.0.0",
   "bin": {
-    "jsugen": "cli/jsugen.js"
+    "jsugen": "cli/esm.js"
   },
   "main": "lib/index.js",
   "repository": "git@github.com:sthzg/json-schema-to-js-utils.git",
@@ -17,10 +17,12 @@
     "lint": "eslint .",
     "format": "prettier --write \"{cli,lib}/**/*.js\"",
     "pretty-quick": "pretty-quick",
-    "test": "jest"
+    "test": "jest",
+    "jsugen": "node cli/esm.js"
   },
   "dependencies": {
     "@cloudflare/json-schema-walker": "^0.1.1",
+    "esm": "^3.0.84",
     "lodash": "^4.17.11",
     "prettier": "^1.14.3",
     "yargs": "^12.0.2"
