--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@cloudflare/json-schema-walker": "^0.1.1",
     "lodash.castarray": "^4.4.0",
+    "lodash.first": "^3.0.0",
     "lodash.isempty": "^4.4.0",
     "lodash.merge": "^4.6.1",
     "lodash.snakecase": "^4.1.1",
