--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "npmClient": "npm",
-  "version": "0.0.0"
+  "version": "0.0.1"
 }
