--- a/packages/jsugen-generate-lodash-object-paths/package.json
+++ b/packages/jsugen-generate-lodash-object-paths/package.json
@@ -24,5 +24,6 @@
   },
   "dependencies": {
     "@sthzg/jsugen-core": "^0.0.2"
-  }
+  },
+  "gitHead": "f7909d029766e0d408f1d5cb9e8411c673d4c4bd"
 }
