--- a/packages/jsugen-cli/package.json
+++ b/packages/jsugen-cli/package.json
@@ -30,5 +30,6 @@
     "@sthzg/jsugen-generate-selector-functions": "^0.0.2",
     "esm": "^3.0.84",
     "yargs": "^12.0.5"
-  }
+  },
+  "gitHead": "f7909d029766e0d408f1d5cb9e8411c673d4c4bd"
 }
