--- a/packages/jsugen-generate-selector-functions/package.json
+++ b/packages/jsugen-generate-selector-functions/package.json
@@ -25,5 +25,6 @@
   "dependencies": {
     "@sthzg/jsugen-core": "^0.0.2",
     "lodash.camelcase": "^4.3.0"
-  }
+  },
+  "gitHead": "f7909d029766e0d408f1d5cb9e8411c673d4c4bd"
 }
