--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pretty-quick": "pretty-quick",
     "test": "echo 'TODO: Setup Jest'",
     "jsugen": "node packages/jsugen-cli/bin/esm.js",
-    "publish:beta": "lerna publish --canary --preid beta --dist-tag next --yes"
+    "publish:beta": "lerna version prerelease --preid beta",
+    "publish:master": "lerna version --conventional-commits"
   }
 }
