--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sthzg/jsugen-core",
-  "version": "0.0.3-NEXT.0",
+  "version": "0.0.3",
   "description": "> TODO: description",
   "author": "Stephan Herzog <sthzgvie@gmail.com>",
   "homepage": "https://github.com/sthzg/jsugen#readme",
