--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pretty-quick": "pretty-quick",
     "test": "echo 'TODO: Setup Jest'",
     "jsugen": "node packages/jsugen-cli/bin/esm.js",
-    "release": "lerna publish --conventional-commits --yes"
+    "release": "lerna publish --conventional-commits --yes",
+    "update": "npx npm-check -y && lerna exec -- npx npm-check -y"
   }
 }
