--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "prettier": "^1.14.3"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-promise": "^3.7.0",
-    "husky": "^1.0.0-rc.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "husky": "^2.1.0",
     "lerna": "^3.13.0",
-    "lint-staged": "^7.3.0",
+    "lint-staged": "^8.1.5",
     "pretty-quick": "^1.7.0"
   },
   "lint-staged": {
