--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,8 @@
 {
   "extends": ["airbnb-base", "prettier"],
   "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
-    }
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "plugins": ["prettier"],
   "rules": {
