build: Setup Jest

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,10 @@
   "rules": {
     "comma-dangle": ["error", "always-multiline"],
     "function-paren-newline": "off"
+  },
+  "globals": {
+    "expect": false,
+    "jest": false,
+    "test": false
   }
 }
