--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     }
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap --hoist",
+    "ci:bootstrap": "lerna bootstrap --hoist",
     "lint": "eslint .",
     "lerna": "lerna",
     "lerna:restrap": "lerna clean --yes && rm -Rfv ./node_modules && npm i && lerna bootstrap",
