refactor: Migrate streams to RxJS

--- a/packages/jsugen-generate-lodash-object-paths/package.json
+++ b/packages/jsugen-generate-lodash-object-paths/package.json
@@ -26,7 +26,8 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
-    "@sthzg/jsugen-core": "^0.1.2"
+    "@sthzg/jsugen-core": "^0.1.2",
+    "rxjs": "^6.5.1"
   },
   "gitHead": "f7909d029766e0d408f1d5cb9e8411c673d4c4bd"
 }
