--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "singleQuote": true,
   "printWidth": 80,
   "semi": true,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "bracketSpacing": true
 }
