--- a/packages/jsugen-generate-enums/package.json
+++ b/packages/jsugen-generate-enums/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@sthzg/jsugen-core": "^0.1.2",
     "lodash.camelcase": "^4.3.0",
-    "lodash.upperfirst": "^4.3.1"
+    "lodash.set": "^4.3.2",
+    "lodash.upperfirst": "^4.3.1",
+    "rxjs": "^6.5.1"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
