--- a/packages/jsugen-generate-selector-functions/package.json
+++ b/packages/jsugen-generate-selector-functions/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "@sthzg/jsugen-core": "^0.1.2",
-    "lodash.camelcase": "^4.3.0"
+    "lodash.camelcase": "^4.3.0",
+    "rxjs": "^6.5.1"
   },
   "gitHead": "f7909d029766e0d408f1d5cb9e8411c673d4c4bd"
 }
