--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   "plugins": ["prettier"],
   "rules": {
     "comma-dangle": ["error", "always-multiline"],
-    "function-paren-newline": "off"
+    "function-paren-newline": "off",
+    "import/prefer-default-export": "off"
   },
   "globals": {
     "expect": false,
