--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -24,14 +24,17 @@
   },
   "dependencies": {
     "@cloudflare/json-schema-walker": "^0.1.1",
+    "lodash.camelcase": "^4.3.0",
     "lodash.castarray": "^4.4.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.first": "^3.0.0",
+    "lodash.flow": "^3.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
     "lodash.merge": "^4.6.1",
     "lodash.set": "^4.3.2",
     "lodash.snakecase": "^4.1.1",
+    "lodash.upperfirst": "^4.3.1",
     "prettier": "^1.15.3",
     "rxjs": "^6.5.1"
   },
