build: Update CircleCI config to release from master
Not every merge into the develop branch should be released immediately
to npm. This commit updates the CircleCI config to relese from the
master branch.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,13 +65,10 @@ workflows:
   version: 2
   test-deploy:
     jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
+      - test
       - deploy:
           requires:
             - test
           filters:
             branches:
-              only: develop
+              only: master
