--- a/packages/jsugen-cli/package.json
+++ b/packages/jsugen-cli/package.json
@@ -27,11 +27,11 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
-    "@sthzg/jsugen-core": "^0.9.2",
-    "@sthzg/jsugen-generate-builder": "^0.9.2",
-    "@sthzg/jsugen-generate-enums": "^0.9.2",
-    "@sthzg/jsugen-generate-lodash-object-paths": "^0.9.2",
-    "@sthzg/jsugen-generate-selector-functions": "^0.9.2",
+    "@sthzg/jsugen-core": "file:../jsugen-core",
+    "@sthzg/jsugen-generate-builder": "file:../jsugen-generate-builder",
+    "@sthzg/jsugen-generate-enums": "file:../jsugen-generate-enums",
+    "@sthzg/jsugen-generate-lodash-object-paths": "file:../jsugen-generate-lodash-object-paths",
+    "@sthzg/jsugen-generate-selector-functions": "file:../jsugen-generate-selector-functions",
     "esm": "^3.2.22",
     "yargs": "^13.2.2"
   },
