build: revert back to the default lerna publish command

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "jsugen": "node packages/jsugen-cli/bin/esm.js",
-    "release": "lerna version --conventional-commits --github-release --yes",
+    "release": "lerna publish --conventional-commits --github-release --yes",
     "update": "npx npm-check -y && lerna exec -- npx npm-check -y"
   }
 }
