--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,9 @@ jobs:
           command: |
             git config user.email "shtzgvie@gmail.com"
             git config user.name "CircleCI"
-#      - run:
-#          name: Publish package
-#          command: npm run release
+      - run:
+          name: Publish package
+          command: npm run release
 
 workflows:
   version: 2
