--- a/lerna.json
+++ b/lerna.json
@@ -4,10 +4,9 @@
   ],
   "npmClient": "npm",
   "version": "0.9.2",
-  "command": {
-    "version": {
-      "allowBranch": ["master"],
-      "ignoreChanges": ["**/__fixtures__/**", "**/__tests__/**", "**/*.md"]
-    }
+  "publish": {
+    "allowBranch": "master",
+    "conventionalCommits": true,
+    "message": "chore(release): updated release notes and package versions"
   }
 }
