--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: npm install
+      - run: yarn install
       - run:
           name: Run tests
-          command: npm test
+          command: yarn test
 
       - save_cache:
           paths:
@@ -58,7 +58,7 @@ jobs:
             git config user.name "CircleCI"
       - run:
           name: Publish package
-          command: npm run release
+          command: yarn release
 
 workflows:
   version: 2
