--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
     "packages/*"
   ],
   "npmClient": "yarn",
+  "useWorkspaces": true,
   "version": "0.9.4",
   "publish": {
     "allowBranch": "master",
