--- a/packages/jsugen-generate-enums/package.json
+++ b/packages/jsugen-generate-enums/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
-    "@sthzg/jsugen-core": "file:../jsugen-core",
+    "@sthzg/jsugen-core": "^0.9.4",
     "rxjs": "^6.5.1"
   },
   "scripts": {
