feat: Add main generator API
The main generator API is passed a configuration object. It then
resolves all configured file globs and executes the configured generator
packages for them.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "test:watch": "jest --watch",
     "jsugen": "node packages/jsugen-cli/bin/esm.js",
     "release": "lerna publish --conventional-commits --github-release --yes",
+    "prerelease": "lerna publish prerelease --preid=next --pre-dist-tag=next --no-changelog",
     "upgrade": "yarn upgrade && lerna exec -- yarn upgrade"
   }
 }
