--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -24,6 +24,9 @@
   },
   "dependencies": {
     "@cloudflare/json-schema-walker": "^0.1.1",
+    "es6-error": "^4.1.1",
+    "fs-extra": "^8.0.1",
+    "glob": "^7.1.4",
     "json-schema-ref-parser": "^6.1.0",
     "prettier": "^1.17.0",
     "rxjs": "^6.5.1"
