--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "0.11.2",
+  "version": "0.11.3-next.0",
   "publish": {
     "allowBranch": "master",
     "conventionalCommits": true,
