--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sthzg/jsugen-core",
-  "version": "0.11.2",
+  "version": "0.11.3-next.0",
   "description": "> TODO: description",
   "author": "Stephan Herzog <sthzgvie@gmail.com>",
   "homepage": "https://github.com/sthzg/jsugen#readme",
