--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,10 @@
     "no-use-before-define": "off"
   },
   "globals": {
+    "after": false,
+    "afterEach": false,
+    "before": false,
+    "beforeEach": false,
     "describe": false,
     "expect": false,
     "jest": false,
