--- a/packages/jsugen-cli/package.json
+++ b/packages/jsugen-cli/package.json
@@ -34,6 +34,7 @@
     "@sthzg/jsugen-generate-lodash-object-paths": "^0.13.0",
     "@sthzg/jsugen-generate-member-names": "^0.13.0",
     "@sthzg/jsugen-generate-selector-functions": "^0.13.0",
+    "@sthzg/jsugen-sources": "^0.13.0",
     "esm": "^3.2.22",
     "yargs": "^13.2.2"
   },
