build: Temporarily disable release from CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,12 @@ jobs:
           command: |
             git config user.email "shtzgvie@gmail.com"
             git config user.name "CircleCI"
-      - run:
-          name: Publish package
-          command: yarn release
+      ###
+      # Disabled temporarily due to release problems to NPM.
+      ###
+      # - run:
+      #     name: Publish package
+      #     command: yarn release
 
 workflows:
   version: 2
