--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -23,14 +23,19 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@cloudflare/json-schema-walker": "^0.1.1",
-    "@sthzg/jsugen-sources": "^0.13.0",
+    "babel-loader": "^8.0.6",
     "es6-error": "^4.1.1",
     "fs-extra": "^8.0.1",
     "glob": "^7.1.4",
     "json-schema-ref-parser": "^7.1.0",
+    "json5-loader": "^3.0.0",
     "prettier": "^1.17.0",
-    "rxjs": "^6.5.1"
+    "require-from-string": "^2.0.2",
+    "rxjs": "^6.5.1",
+    "webpack": "^4.35.0"
   },
   "peerDependencies": {
     "lodash-es": ">=4"
