--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -24,6 +24,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-export-default-from": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@cloudflare/json-schema-walker": "^0.1.1",
     "babel-loader": "^8.0.6",
