--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sthzg/jsugen-core",
-  "version": "0.15.1-next.0",
+  "version": "0.15.0",
   "description": "> TODO: description",
   "author": "Stephan Herzog <sthzgvie@gmail.com>",
   "homepage": "https://github.com/sthzg/jsugen#readme",
@@ -23,24 +23,24 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-env": "^7.6.3",
     "@cloudflare/json-schema-walker": "^0.1.1",
     "babel-loader": "^8.0.6",
     "es6-error": "^4.1.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
-    "json-schema-ref-parser": "^7.1.0",
+    "json-schema-ref-parser": "^7.1.1",
     "json5-loader": "^3.0.0",
     "prettier": "^1.17.0",
     "require-from-string": "^2.0.2",
-    "rxjs": "^6.5.1",
-    "webpack": "^4.35.3"
+    "rxjs": "^6.5.3",
+    "webpack": "^4.41.2"
   },
   "peerDependencies": {
     "lodash-es": ">=4"
