--- a/packages/jsugen-generate-enums/package.json
+++ b/packages/jsugen-generate-enums/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sthzg/jsugen-generate-enums",
-  "version": "0.15.0",
+  "version": "0.15.1-next.1",
   "description": "> TODO: description",
   "author": "Stephan Herzog <sthzgvie@gmail.com>",
   "homepage": "https://github.com/sthzg/jsugen#readme",
@@ -20,7 +20,7 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
-    "@sthzg/jsugen-core": "^0.15.0",
+    "@sthzg/jsugen-core": "^0.15.1-next.1",
     "rxjs": "^6.5.3"
   },
   "peerDependencies": {
