--- a/packages/jsugen-generate-builder/package.json
+++ b/packages/jsugen-generate-builder/package.json
@@ -17,10 +17,8 @@
     "url": "git+https://github.com/sthzg/jsugen.git"
   },
   "dependencies": {
-    "@sthzg/jsugen-core": "^0.15.3"
-  },
-  "peerDependencies": {
-    "lodash-es": ">=4"
+    "@sthzg/jsugen-core": "^0.15.3",
+    "lodash-es": "^4.17.15"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
