--- a/packages/jsugen-generate-from-script/package.json
+++ b/packages/jsugen-generate-from-script/package.json
@@ -21,10 +21,8 @@
   },
   "dependencies": {
     "@sthzg/jsugen-core": "^0.15.3",
+    "lodash-es": "^4.17.15",
     "rxjs": "^6.5.3"
-  },
-  "peerDependencies": {
-    "lodash-es": ">=4"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
