--- a/packages/jsugen-generate-lodash-object-paths/package.json
+++ b/packages/jsugen-generate-lodash-object-paths/package.json
@@ -27,9 +27,7 @@
   },
   "dependencies": {
     "@sthzg/jsugen-core": "^0.15.3",
+    "lodash-es": "^4.17.15",
     "rxjs": "^6.5.3"
-  },
-  "peerDependencies": {
-    "lodash-es": ">=4"
   }
 }
