--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
     "@babel/preset-env": "^7.6.3",
     "@cloudflare/json-schema-walker": "^0.1.1",
     "babel-loader": "^8.0.6",
