--- a/packages/jsugen-core/package.json
+++ b/packages/jsugen-core/package.json
@@ -23,22 +23,22 @@
     "url": "https://github.com/sthzg/jsugen/issues"
   },
   "dependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-export-default-from": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-export-default-from": "^7.18.6",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@cloudflare/json-schema-walker": "^0.1.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.5",
     "es6-error": "^4.1.1",
     "fs-extra": "^8.1.0",
-    "glob": "^7.1.4",
+    "glob": "^8.0.3",
     "json-schema-ref-parser": "^7.1.1",
     "json5-loader": "^3.0.0",
-    "lodash-es": "4.17.15",
+    "lodash-es": "^4.17.21",
     "prettier": "^1.17.0",
     "require-from-string": "^2.0.2",
     "rxjs": "^6.5.3",
